--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cloudinary": "^2.6.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
@@ -25,7 +26,8 @@
     "nodemailer": "^6.10.1",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
-    "swiper": "^11.2.8"
+    "swiper": "^11.2.8",
+    "validator": "^13.15.15"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
