--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "jsonwebtoken": "^9.0.2",
     "mailtrap": "^4.0.0",
     "mongoose": "^8.13.1",
-    "nodemailer": "^6.10.1",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
+    "resend": "^4.6.0",
     "swiper": "^11.2.8",
     "validator": "^13.15.15"
   },
