--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "type": "module",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "browser-image-compression": "^2.0.2",
     "cloudinary": "^2.6.0",
@@ -21,11 +22,10 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "mailtrap": "^4.0.0",
     "mongoose": "^8.13.1",
+    "nodemailer": "^6.10.1",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
-    "resend": "^4.6.0",
     "swiper": "^11.2.8",
     "validator": "^13.15.15"
   },
