--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.1",
-    "nodemailer": "^6.10.1",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
+    "resend": "^6.8.0",
     "swiper": "^11.2.8",
     "validator": "^13.15.15"
   },
